// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InputField renders with description 1`] = `
<div
  className="mb-3"
  data-cy="controlId"
  ref={null}
>
  <label
    className="form-label"
    htmlFor="controlId"
    ref={null}
  >
    label
     *
  </label>
  <input
    className="form-control"
    id="controlId"
    name="name"
    onChange={[Function]}
    ref={null}
    required={true}
    type="text"
  />
  <small
    className="text-muted contactFormTextMuted form-text"
    ref={null}
  >
    description
  </small>
  <div
    className="invalid-feedback"
    ref={null}
  >
    errorMessage
  </div>
</div>
`;

exports[`InputField renders with empty label and filled ariaLabel 1`] = `
<div
  className="mb-3"
  data-cy="controlId"
  ref={null}
>
  <input
    aria-label="ariaLabel"
    className="form-control"
    id="controlId"
    name="name"
    onChange={[Function]}
    ref={null}
    required={true}
    type="text"
  />
  <div
    className="invalid-feedback"
    ref={null}
  >
    errorMessage
  </div>
</div>
`;

exports[`InputField renders with required parameters 1`] = `
<div
  className="mb-3"
  data-cy="controlId"
  ref={null}
>
  <label
    className="form-label"
    htmlFor="controlId"
    ref={null}
  >
    label
     *
  </label>
  <input
    className="form-control"
    id="controlId"
    name="name"
    onChange={[Function]}
    ref={null}
    required={true}
    type="text"
  />
  <div
    className="invalid-feedback"
    ref={null}
  >
    errorMessage
  </div>
</div>
`;
